🎺👍 Checkpoint ./ayarlar.json:27577750/77 ./package.json:27577750/157

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "melik-exe-banbot",
+  "name": "dizzy",
   "version": "0.0.1",
   "description": "discord um melik ama yıkık olandan alayım#0061",
   "main": "bot.js",
