--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "discord.js": "^12.5.2",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "js-message": "^1.0.7"
   },
   "engines": {
     "node": "12.x"
