--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "melik-exe-banbot",
   "version": "0.0.1",
-  "description": "by melik ama yıkık olandan alayım#0061",
+  "description": "by dizzy'#0061",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
@@ -9,7 +9,8 @@
   "dependencies": {
     "discord.js": "^12.5.2",
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "node": "^15.12.0"
   },
   "engines": {
     "node": "12.x"
